src/objects/OCIO_OGC_Case_History_Data__c.object
<CustomObject>
    <description>Case History Data objects will be child records to OGC Case Tracking record.</description>
    <fields>
        <fullName>ADR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affirmative_Claim_Amount__c</fullName>
        <label>Affirmative Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <inlineHelpText>If you have an affirmative claim, put zero for the claim amount.</inlineHelpText>
        <label>Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corrective_Action_Protest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corrective Action (Protest)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Closed_Case_History_Data__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened_OGC_Case_History_Data__c</fullName>
        <label>Date Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <inlineHelpText>Use &quot;Dismissed&quot; if decision was based on a procedural matter (e.g., jurisdiction); use &quot;In Government&apos;s Favor&quot; if the decision was on the merits.</inlineHelpText>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disposition__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
                <value>
                    <fullName>In Government&apos;s Favor</fullName>
                </value>
                <value>
                    <fullName>In Adverse Party&apos;s Favor</fullName>
                </value>
                <value>
                    <fullName>Partially in Government&apos;s Favor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <inlineHelpText>Do not use &quot;Deemed Denial&quot; except for contracting officer final decisions.</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deemed Denial</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Settled</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docket_Number__c</fullName>
        <label>Docket Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Attorney_Fees__c</fullName>
        <label>Estimated Attorney Fees</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Interest_Amount__c</fullName>
        <label>Estimated Total Interest Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forum_Case_History_Data__c</fullName>
        <label>Forum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Agency Protest Official</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>CBCA</fullName>
                </value>
                <value>
                    <fullName>Contracting Officer</fullName>
                </value>
                <value>
                    <fullName>Court of Federal Claims</fullName>
                </value>
                <value>
                    <fullName>EEOC - AJ</fullName>
                </value>
                <value>
                    <fullName>EEOC - OFO</fullName>
                </value>
                <value>
                    <fullName>FLRA - Hearing Examiner</fullName>
                </value>
                <value>
                    <fullName>FLRA</fullName>
                </value>
                <value>
                    <fullName>GAO</fullName>
                </value>
                <value>
                    <fullName>MSPB - AJ</fullName>
                </value>
                <value>
                    <fullName>MSPB - FB</fullName>
                </value>
                <value>
                    <fullName>Office of Special Counsel</fullName>
                </value>
                <value>
                    <fullName>Public Utility Commission</fullName>
                </value>
                <value>
                    <fullName>State Court</fullName>
                </value>
                <value>
                    <fullName>U.S. Bankruptcy Court</fullName>
                </value>
                <value>
                    <fullName>U.S. District Court</fullName>
                </value>
                <value>
                    <fullName>U.S. Court of Appeals</fullName>
                </value>
                <value>
                    <fullName>U.S. Supreme Court</fullName>
                </value>
                <value>
                    <fullName>Other Forum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forum_Type__c</fullName>
        <formula>OGC_Matter_Title_Name__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forum Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Division__c</fullName>
        <label>Handling Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LP</fullName>
                </value>
                <value>
                    <fullName>LR</fullName>
                </value>
                <value>
                    <fullName>LD1</fullName>
                </value>
                <value>
                    <fullName>LD2</fullName>
                </value>
                <value>
                    <fullName>LD3</fullName>
                </value>
                <value>
                    <fullName>LD4</fullName>
                </value>
                <value>
                    <fullName>LD5</fullName>
                </value>
                <value>
                    <fullName>LD6</fullName>
                </value>
                <value>
                    <fullName>LD7</fullName>
                </value>
                <value>
                    <fullName>LD8</fullName>
                </value>
                <value>
                    <fullName>LD9</fullName>
                </value>
                <value>
                    <fullName>LDA</fullName>
                </value>
                <value>
                    <fullName>LDW</fullName>
                </value>
                <value>
                    <fullName>NTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_in_Affirmative_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Affirmative Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Loss_Amount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include in Loss Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_Total_Amount_Claimed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include in Total Amount Claimed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Start_Date__c</fullName>
        <label>Interest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Amount__c</fullName>
        <label>Loss Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Claim_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Claim Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OGC_Matter_Title_Name__c</fullName>
        <label>OGC Matter Title/Name</label>
        <referenceTo>OCIO_OGC_Case_Tracking__c</referenceTo>
        <relationshipLabel>OGC Case History Data</relationshipLabel>
        <relationshipName>Case_History_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personnel_Forum_Case_History_Data__c</fullName>
        <label>Personnel Forum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Arbitration</fullName>
                </value>
                <value>
                    <fullName>Court of Federal Claims</fullName>
                </value>
                <value>
                    <fullName>EEOC - AJ</fullName>
                </value>
                <value>
                    <fullName>EEOC - OFO</fullName>
                </value>
                <value>
                    <fullName>FLRA</fullName>
                </value>
                <value>
                    <fullName>FLRA - Hearing Examiner</fullName>
                </value>
                <value>
                    <fullName>MSPB - AJ</fullName>
                </value>
                <value>
                    <fullName>MSPB - FB</fullName>
                </value>
                <value>
                    <fullName>Office of Special Counsel</fullName>
                </value>
                <value>
                    <fullName>U.S. Court of Appeals</fullName>
                </value>
                <value>
                    <fullName>U.S. District Court</fullName>
                </value>
                <value>
                    <fullName>U.S. Supreme Court</fullName>
                </value>
                <value>
                    <fullName>Other Forum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personnel_Handling_Division__c</fullName>
        <label>Personnel Handling Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>LD1</fullName>
                </value>
                <value>
                    <fullName>LD2</fullName>
                </value>
                <value>
                    <fullName>LD3</fullName>
                </value>
                <value>
                    <fullName>LD4</fullName>
                </value>
                <value>
                    <fullName>LD5</fullName>
                </value>
                <value>
                    <fullName>LD6</fullName>
                </value>
                <value>
                    <fullName>LD7</fullName>
                </value>
                <value>
                    <fullName>LD8</fullName>
                </value>
                <value>
                    <fullName>LD9</fullName>
                </value>
                <value>
                    <fullName>LDA</fullName>
                </value>
                <value>
                    <fullName>LDW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recovery_Amount__c</fullName>
        <label>Recovery Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarks_OGC_Case_History_Data__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transferred_to_Agency__c</fullName>
        <inlineHelpText>Provide name of agency to which case was transferred.</inlineHelpText>
        <label>Transferred to Agency</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>OGC Case History Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OGC Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OGC Case History Data</pluralLabel>
    <recordTypes>
        <fullName>OGC_Case_Matter_History_Data</fullName>
        <active>true</active>
        <description>This is used to track case history data for cases that are not personnel related cases.</description>
        <label>Non-Personnel Case History Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>OGC_Personnel_Case_History_Data</fullName>
        <active>true</active>
        <description>This is used to track case history data for cases that are personnel related cases.</description>
        <label>Personnel Case History Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Date_Closed_Mandatory_Status_Closed</fullName>
        <active>true</active>
        <description>Date Closed field is Mandatory, when Status field value is Closed. If status is &quot;Open&quot; then leave this field blank.</description>
        <errorConditionFormula>AND( ISPICKVAL (Status__c , &quot;Closed&quot;),   ISNULL(Date_Closed_Case_History_Data__c ) )||
AND (ISPICKVAL(Status__c, &quot;Open&quot;),  NOT( ISNULL(Date_Closed_Case_History_Data__c) ))</errorConditionFormula>
        <errorDisplayField>Date_Closed_Case_History_Data__c</errorDisplayField>
        <errorMessage>Date Closed field is Mandatory, when Status field value is Closed. If status is &quot;Open&quot; then leave this field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Closed_cannot_be_prior_to_Date_Open</fullName>
        <active>true</active>
        <description>Date Closed cannot be earlier than Date Opened</description>
        <errorConditionFormula>Date_Closed_Case_History_Data__c &lt;  Date_Opened_OGC_Case_History_Data__c</errorConditionFormula>
        <errorDisplayField>Date_Closed_Case_History_Data__c</errorDisplayField>
        <errorMessage>Date Closed cannot be earlier than Date Opened.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Estimated_Claim_Amount_greater_than_zero</fullName>
        <active>false</active>
        <description>If no claim amount is blank.</description>
        <errorConditionFormula>AND(NOT( No_Claim_Amount__c ), OR((ISNULL( Claim_Amount__c  )),  Claim_Amount__c  =0))</errorConditionFormula>
        <errorMessage>An Estimated Claim Amount must be entered or you must identify No Claim Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoClaimAmount_or_EstimatedClaimAmount</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  No_Claim_Amount__c ,  Claim_Amount__c &lt;&gt;0)</errorConditionFormula>
        <errorDisplayField>Claim_Amount__c</errorDisplayField>
        <errorMessage>Enter a Value in &quot;Claim Amount&quot; or Check &quot;No Claim Amount&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Negative_Recovery_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>Recovery_Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Recovery Amount cannot be negative.</errorMessage>
    </validationRules>
</CustomObject>